<resources>
    <string name="app_name">QuizApp</string>
    <string name="fun_with_flags">Fun with Flags</string>
    <string name="welcome">Welcome</string>
    <string name="enter_your_name">Please enter your name</string>
    <string name="hint">Name</string>
    <string name="startBtn">Start</string>
    <string name="submit">SUBMIT</string>
    <string name="result">RESULT</string>
    <string name="congrats">Hey, Congratulations!</string>
    <string name="finish">BACK TO START</string>
    <string name="image">image</string>
</resources>